syntax = "proto3";

package template;

import "google/protobuf/timestamp.proto";
// import "google/protobuf/empty.proto";



enum Role{
    USER = 0;
    ADMIN = 1;
}

message User{
    int32 id = 1;
    string username = 2;
    Role role = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
}

message LoginRequest{
    string username = 1;
    string password = 2;
    optional string totpCode = 3;
}

// message LoginResponse{
//     string access_token = 1;
//     string refresh_token = 2;
//     string csrf_token = 3;
//     User user = 4;
// }

message RefreshTokenRequest{
    string refresh_token = 1;
}

// message RefreshTokenResponse{
//     string access_token = 1;
//     string refresh_token = 2;
//     string csrf_token = 3;
//     User user = 4;
// }

message LogoutRequest{
    string refresh_token = 1;
}

message LogoutResponse{
    bool success = 1;
}

message RegisterRequest{
    string username = 1;
    string password = 2;
}


message StatusRequest{
    string access_token = 1;
}

message StatusResponse{
    User user = 1;
}

message DefaultAuthResponse{
    string access_token = 1;
    string refresh_token = 2;
    string csrf_token = 3;
    User user = 4;
}

service AuthService{
    rpc Login(LoginRequest) returns (DefaultAuthResponse);
    rpc RefreshToken(RefreshTokenRequest) returns (DefaultAuthResponse);
    rpc Logout(LogoutRequest) returns (LogoutResponse);
    rpc Register(RegisterRequest) returns (DefaultAuthResponse);
    rpc Status(StatusRequest) returns (StatusResponse);
}
